config/501-policy-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: defaulting.clusterimagepolicy.sigstore.dev
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: webhook
        namespace: cosign-system
        path: /default-sigstore-dev-v1alpha1-clusterimagepolicy
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: defaulting.clusterimagepolicy.sigstore.dev
    rules:
      - apiGroups:
          - sigstore.dev
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - clusterimagepolicies
    sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: validating.clusterimagepolicy.sigstore.dev
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: webhook
        namespace: cosign-system
        path: /validate-sigstore-dev-v1alpha1-clusterimagepolicy
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validating.clusterimagepolicy.sigstore.dev
    rules:
      - apiGroups:
          - sigstore.dev
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - clusterimagepolicies
    sideEffects: None
